# cpp-core-snippets

./: .gitignore  README.md
10-cpp-core/s0010-el-puntero-this/: persona.cpp
10-cpp-core/s0020-ciclo-de-vida-y-destructores/: diario.txt  readme.md
10-cpp-core/s0040-constructores-destructor/: ConstructoresDestructor.cpp
10-cpp-core/s0060-constructor-movimiento/: ConstructorMovimiento.cpp  readme.md
10-cpp-core/s0066-ejemplos-clase-Complejo/: TplComplejo.cpp  readme.md
10-cpp-core/s0090-weak_ptr/: readme.md
10-cpp-core/s0150-plantillas-funcion/: TplValor.cpp
10-cpp-core/s0160-plantillas-clase/: TplClaseRef.cpp  readme.md
20-qt-framework/s0220-memoria-dinamica/: CMakeLists.txt  memoriaDinamica.cpp
20-qt-framework/s0230-lambdas-y-slots/: lambdasSlots.cpp
20-qt-framework/s0230-qmainwindow-stack-heap/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  readme.md
20-qt-framework/s0240-lambdas-y-slots/: lambdasSlots.cpp  main.cpp  readme.md
20-qt-framework/s0250-lambdas-y-this/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  readme.md
20-qt-framework/s0260-ventanas/: CMakeLists.txt  VentanaPrincipal.h  VentanaSecundaria.h  main.cpp  readme.md
20-qt-framework/s0270-qmessagebox/: CMakeLists.txt  main.cpp  readme.md
30-opencv-vision/s0310-cv-mat/: CMakeLists.txt  cv-mat.cpp  readme.md
30-opencv-vision/s0320-escanear-matrices/: readme.md
30-opencv-vision/s0320-escanear-matrices/forma-mas-rapida/: mas-rapida.cpp  readme.md
30-opencv-vision/s0320-escanear-matrices/forma-mas-segura/: mas-segura.cpp  readme.md
30-opencv-vision/s0320-escanear-matrices/punteros-a-filas/: CMakeLists.txt  punteros-a-filas.cpp  readme.md
30-opencv-vision/s0330-webcam-opencv/: CMakeLists.txt  readme.md  webcam.cpp
40-qt-opencv/s0410-puente-mat-qimage/: CMakeLists.txt  puente-mat-qimage.cpp  readme.md
40-qt-opencv/s0450-cimastudio/: CMakeLists.txt  cimastudio.cpp  cimastudio.h
50-cuda-parallel/: readme.md
50-cuda-parallel/s5110-instalacion-del-entorno-cuda/: SumarVectores_v1.0.cu  SumarVectores_v1.1.cu  instalar-cuda.md  readme.md  sumar-vectores.md
50-cuda-parallel/s5120-ejemplos-cuda/prod-mat/: MatMul_v2.0_Basic.cu  ProductoMatrices_v1.0.cu  ProductoMatrices_v1.1.cu  ProductoMatrices_v1.2_Unified.cu
50-cuda-parallel/s5120-ejemplos-cuda/sum-mat/: SumarMatrices.cu
50-cuda-parallel/s5120-ejemplos-cuda/sum-vec/: SumarVectores_v1.0.cu  SumarVectores_v1.1.cu
50-cuda-parallel/s5130-ejemplos-cuda/: readme.md
60-proyectos-qt-cuda/s6110-regresion-lineal_v1.1/: gardenview.cpp
60-proyectos-qt-cuda/s6120-regresion-lineal_v1.2/: CMakeLists.txt
60-proyectos-qt-cuda/s6130-regresion-lineal_v1.3/: CMakeLists.txt
60-proyectos-qt-cuda/s6140-Clasificacion/: CMakeLists.txt  CudaRegressor.cu  MainWindow.cpp  MainWindow.h
60-qt-cuda/s6110-regresion-lineal_v1.1/: CMakeLists.txt
60-qt-cuda/s6130-regresion-lineal_v1.3/: main.cpp
60-qt-cuda/s6140-Clasificacion/: CudaRegressor.h  PointManager.h
snippets-01-cpp/s0010-el-puntero-this/: persona.cpp  readme.md
snippets-01-cpp/s0020-ciclo-de-vida-y-destructores/: readme.md
snippets-05-cuda/s5110-instalacion-del-entorno-cuda/: hola-cuda.cu  sumarvectores.cu
snippets-a-Cpp/s0010-el-puntero-this/: cirujano.cpp  readme.md
snippets-a-Cpp/s0020-ciclo-de-vida-y-destructores/: EscritorSeguro.cpp
snippets-a-Cpp/s0030-paso-por-valor-referencia/: imprimir.cpp  imprimir2.cpp  readme.md
snippets-a-Cpp/s0040-constructores-destructor/: ConstructoresDestructor.cpp  readme.md
snippets-a-Cpp/s0045-constructor-copia/: ConstructorCopia.cpp  readme.md
snippets-a-Cpp/s0050-copia-superficial/: PeligroCopiaSuperficial.cpp  PeligroCopiaSuperficial2.cpp
snippets-a-Cpp/s0050-peligro-copia-superficial/: PeligroCopiaSuperficial.cpp  PeligroCopiaSuperficial2.cpp  readme.md
snippets-a-Cpp/s0055-constructor-copia/: ConstructorCopia.cpp
snippets-a-Cpp/s0060-constructor-movimiento/: CopiaProfunda.cpp
snippets-a-Cpp/s0065-hoja-de-ruta/: readme.md
snippets-a-Cpp/s0066-ejemplos-clase-Complejo/: Complejo.cpp
snippets-a-Cpp/s0066-ejemplos-clase-Complejo/kk-dox/: .~lock.Respuesta_IA_ampliaciones.odt#  readme.md
snippets-a-Cpp/s0070-unique_ptr/: readme.md  unique_ptr.cpp
snippets-a-Cpp/s0080-shared_ptr/: readme.md  shared_ptr.cpp
snippets-a-Cpp/s0090-weak_ptr/: weak_ptr.cpp
snippets-a-Cpp/s0100-resumen/: README.md  resumen.cpp
snippets-a-Cpp/s0100-resumen_ptr/: readme.md
snippets-a-Cpp/s0150-plantillas-funcion/: TemplatesFfuncion.cpp  TplRef.cpp  readme.md
snippets-a-Cpp/s0160-plantillas-clase/: TemplatesClase.cpp  TplClaseValor.cpp
snippets-a-cpp/s0010-el-puntero-this/: cirujano.cpp  persona.cpp  readme copy.md  readme.md
snippets-a-cpp/s0030-paso-por-valor-referencia/: imprimir.cpp  imprimir2.cpp
snippets-b-qt/s0210-holamundo-qt/: CMakeLists.txt  holamundo.cpp
snippets-b-qt/s0220-memoria-dinamica/: memoriaDinamica.cpp
snippets-b-qt/s0230-lambdas-y-slots/: CMakeLists.txt
snippets-c-OpenCV/s0310-cv-mat/: cv-mat.cpp
snippets-c-OpenCV/s0320-escanear-matrices/forma-mas-rapida/: CMakeLists.txt  mas-rapida.cpp
snippets-c-OpenCV/s0320-escanear-matrices/forma-mas-segura/: CMakeLists.txt  mas-segura.cpp
snippets-c-OpenCV/s0320-escanear-matrices/punteros-a-filas/: punteros-a-filas.cpp
snippets-c-OpenCV/s0330-webcam-opencv/: webcam.cpp
snippets-c-opencv/s0330-hola-mundo-opencv/: CMakeLists.txt  main.cpp
snippets-c-opencv/s0340-escanear-matrices/: CMakeLists.txt  main.cpp
snippets-d-OpenCV-Qt/s0410-puente-mat-qimage/: puente-mat-qimage.cpp
snippets-d-OpenCV-Qt/s0450-cimastudio/: main.cpp
snippets-e-CUDA/s530-ejemplos-cuda/: ProductoMatrices_v1.0.cu  RegresionLineal_v1.0.cu  SumaVectores_v1.1.cu  SumarMatrices.cu
snippets-f-CUDA-Qt/ejemplos/s6110-regresion-lineal_v1.1/: gardenview.h  kernel.cu
snippets-f-CUDA-Qt/ejemplos/s6120-regresion-lineal_v1.2/: gardenview.h
snippets-f-CUDA-Qt/ejemplos/s6130-regresion-lineal_v1.3/: gardenview.cpp  gardenview.h
snippets-f-CUDA-Qt/ejemplos/s6140-Clasificacion/: CMakeLists.txt  main.cpp
snippets-f-CUDA-Qt/s6120-regresion-lineal_v1.2/: gardenview.cpp
